bug: minor fixes to tooltips: better v-pos, clear on click.
* tooltips above button were appearing too low; they are now higher.
* we now clear the tooltip on click, in case eg clicking makes the
  button disappear, as with the delete object button.

--- a/project/src/styles.sass
+++ b/project/src/styles.sass
@@ -147,7 +147,7 @@ html, body
   position: absolute
   z-index: 99
 
-  margin-top: -$content-margin
+  margin-top: -$content-margin - 12px
   &.mirrored
     margin-left: -$hpadding
   &.dropped
